--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 #server port
 server.port=9000
+spring.application.name=Ecommerce Product Rest Apis
+
+#spring data source config
+spring.datasource.url=jdbc:mysql://localhost:3306/ecom_webservice
+spring.datasource.username=root
+spring.datasource.password=root
+
+# hibernate config
+spring.jpa.hibernate.ddl-auto=update
